# pyd-smc-ctf-challenge

./: CMakeLists.txt  README.md  decider.cpp  decider.pyd  decider.pyi  enc_dlls.py  exp.py  lyric.txt  prepare.cpp  prepare.pyd  prepare.pyi  pyd-smc-ctf-challenge.py  pyd-smc-ctf-challenge.spec  resources.py  smc.cpp  smc.h  test_decider.py  test_prepare.py
